// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tag or CheckTag > :Tag:props > :checked 1`] = `
<div
  checked="checked"
  class="t-tag t-tag--default t-tag--dark"
>
  <span />
</div>
`;

exports[`Tag or CheckTag > :Tag:props > :closable 1`] = `
<div
  class="t-tag t-tag--default t-tag--dark t-tag--close"
>
  <span />
  <svg
    class="t-icon t-icon-close t-tag__icon-close"
    fill="none"
    height="1em"
    style="fill: none;"
    viewBox="0 0 24 24"
    width="1em"
  >
    <g
      id="close"
    >
      <path
        d="M16.9503 7.05029L12.0005 12M12.0005 12L7.05078 16.9498M12.0005 12L16.9503 16.9498M12.0005 12L7.05078 7.05029"
        id="stroke1"
        stroke="currentColor"
        stroke-linecap="square"
        stroke-width="2"
      />
    </g>
  </svg>
</div>
`;

exports[`Tag or CheckTag > :Tag:props > :disabled 1`] = `
<div
  class="t-tag t-tag--default t-tag--dark t-is-disabled t-tag--disabled"
>
  <span />
</div>
`;

exports[`Tag or CheckTag > :Tag:props > :maxWidth 1`] = `
<div
  class="t-tag t-tag--default t-tag--dark t-tag--ellipsis"
>
  <span
    class="t-tag--text"
    style="max-width: 100px;"
  />
</div>
`;

exports[`Tag or CheckTag > :Tag:props > :shape:mark 1`] = `
<div
  class="t-tag t-tag--default t-tag--dark t-tag--mark"
>
  <span />
</div>
`;

exports[`Tag or CheckTag > :Tag:props > :shape:round 1`] = `
<div
  class="t-tag t-tag--default t-tag--dark t-tag--round"
>
  <span />
</div>
`;

exports[`Tag or CheckTag > :Tag:props > :shape:square 1`] = `
<div
  class="t-tag t-tag--default t-tag--dark"
>
  <span />
</div>
`;

exports[`Tag or CheckTag > :Tag:props > :size:large 1`] = `
<div
  class="t-tag t-tag--default t-tag--dark t-size-l"
>
  <span />
</div>
`;

exports[`Tag or CheckTag > :Tag:props > :size:medium 1`] = `<!---->`;

exports[`Tag or CheckTag > :Tag:props > :size:small 1`] = `<!---->`;

exports[`Tag or CheckTag > :Tag:props > :theme: 1`] = `
<div
  class="t-tag t-tag--default t-tag--dark"
>
  <span />
</div>
`;

exports[`Tag or CheckTag > :Tag:props > :theme:danger 1`] = `
<div
  class="t-tag t-tag--danger t-tag--dark"
>
  <span />
</div>
`;

exports[`Tag or CheckTag > :Tag:props > :theme:default 1`] = `
<div
  class="t-tag t-tag--default t-tag--dark"
>
  <span />
</div>
`;

exports[`Tag or CheckTag > :Tag:props > :theme:primary 1`] = `
<div
  class="t-tag t-tag--primary t-tag--dark"
>
  <span />
</div>
`;

exports[`Tag or CheckTag > :Tag:props > :theme:success 1`] = `
<div
  class="t-tag t-tag--success t-tag--dark"
>
  <span />
</div>
`;

exports[`Tag or CheckTag > :Tag:props > :theme:warning 1`] = `
<div
  class="t-tag t-tag--warning t-tag--dark"
>
  <span />
</div>
`;

exports[`Tag or CheckTag > :Tag:props > :variant:dark;theme:danger 1`] = `
<div
  class="t-tag t-tag--danger t-tag--dark"
>
  <span />
</div>
`;

exports[`Tag or CheckTag > :Tag:props > :variant:dark;theme:default 1`] = `
<div
  class="t-tag t-tag--default t-tag--dark"
>
  <span />
</div>
`;

exports[`Tag or CheckTag > :Tag:props > :variant:dark;theme:primary 1`] = `
<div
  class="t-tag t-tag--primary t-tag--dark"
>
  <span />
</div>
`;

exports[`Tag or CheckTag > :Tag:props > :variant:dark;theme:success 1`] = `
<div
  class="t-tag t-tag--success t-tag--dark"
>
  <span />
</div>
`;

exports[`Tag or CheckTag > :Tag:props > :variant:dark;theme:warning 1`] = `
<div
  class="t-tag t-tag--warning t-tag--dark"
>
  <span />
</div>
`;

exports[`Tag or CheckTag > :Tag:props > :variant:light;theme:danger 1`] = `
<div
  class="t-tag t-tag--danger t-tag--light"
>
  <span />
</div>
`;

exports[`Tag or CheckTag > :Tag:props > :variant:light;theme:danger 2`] = `
<div
  class="t-tag t-tag--danger t-tag--light"
>
  <span />
</div>
`;

exports[`Tag or CheckTag > :Tag:props > :variant:light;theme:default 1`] = `
<div
  class="t-tag t-tag--default t-tag--light"
>
  <span />
</div>
`;

exports[`Tag or CheckTag > :Tag:props > :variant:light;theme:default 2`] = `
<div
  class="t-tag t-tag--default t-tag--light"
>
  <span />
</div>
`;

exports[`Tag or CheckTag > :Tag:props > :variant:light;theme:primary 1`] = `
<div
  class="t-tag t-tag--primary t-tag--light"
>
  <span />
</div>
`;

exports[`Tag or CheckTag > :Tag:props > :variant:light;theme:primary 2`] = `
<div
  class="t-tag t-tag--primary t-tag--light"
>
  <span />
</div>
`;

exports[`Tag or CheckTag > :Tag:props > :variant:light;theme:success 1`] = `
<div
  class="t-tag t-tag--success t-tag--light"
>
  <span />
</div>
`;

exports[`Tag or CheckTag > :Tag:props > :variant:light;theme:success 2`] = `
<div
  class="t-tag t-tag--success t-tag--light"
>
  <span />
</div>
`;

exports[`Tag or CheckTag > :Tag:props > :variant:light;theme:warning 1`] = `
<div
  class="t-tag t-tag--warning t-tag--light"
>
  <span />
</div>
`;

exports[`Tag or CheckTag > :Tag:props > :variant:light;theme:warning 2`] = `
<div
  class="t-tag t-tag--warning t-tag--light"
>
  <span />
</div>
`;

exports[`Tag or CheckTag > @event: Tag > Event passthrough: close 1`] = `
<div
  class="t-tag t-tag--default t-tag--dark t-tag--close"
>
  <span />
  <svg
    class="t-icon t-icon-close t-tag__icon-close"
    fill="none"
    height="1em"
    style="fill: none;"
    viewBox="0 0 24 24"
    width="1em"
  >
    <g
      id="close"
    >
      <path
        d="M16.9503 7.05029L12.0005 12M12.0005 12L7.05078 16.9498M12.0005 12L16.9503 16.9498M12.0005 12L7.05078 7.05029"
        id="stroke1"
        stroke="currentColor"
        stroke-linecap="square"
        stroke-width="2"
      />
    </g>
  </svg>
</div>
`;

exports[`Tag or CheckTag > CheckTag:props > :checked 1`] = `
<div
  class="t-tag t-tag--primary t-tag--dark t-tag t-tag--check t-size-m t-tag--checked"
  tabindex="0"
>
  <span />
</div>
`;

exports[`Tag or CheckTag > CheckTag:props > :disabled 1`] = `
<div
  class="t-tag t-tag--default t-tag--dark t-is-disabled t-tag--disabled t-tag t-tag--check t-size-m t-tag--disabled"
>
  <span />
</div>
`;

exports[`Tag or CheckTag > Tag:slot > <icon> 1`] = `
<div
  class="t-tag t-tag--default t-tag--dark"
>
  <div />
  <span />
</div>
`;
